<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/gray_f3f3f3"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_more_about"
            style="@style/dialogmoreStyle"
            android:drawableTop="@mipmap/it_guanyu"
            android:text="@string/about"/>
        <Button
            android:id="@+id/dialog_more_setting"
            style="@style/dialogmoreStyle"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:drawableTop="@mipmap/it_shezhi"
            android:text="@string/setting"/>
        <Button
            android:id="@+id/dialog_more_record"
            style="@style/dialogmoreStyle"
            android:drawableTop="@mipmap/it_jilu"
            android:text="@string/history_record"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="3">
        <Button
            android:id="@+id/dialog_more_accountinfo"
            style="@style/dialogmoreStyle"
            android:drawableTop="@mipmap/it_guanyu"
            android:text="@string/accountinfo"
            android:layout_marginEnd="30dp"/>
        <Button
            android:id="@+id/dialog_more_regist"
            style="@style/dialogmoreStyle"
            android:drawableTop="@mipmap/it_guanyu"
            android:text="@string/regist"
            android:layout_marginEnd="30dp"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/dialog_more_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ih_error"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>
</LinearLayout>