<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/dialog_remark_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_remark"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/dialog_remark_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_remark_tv"
        android:hint="@string/remark_add"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="14sp"
        android:background="@color/white">
        <requestFocus/>
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/dialog_remark_et"
        android:padding="10dp">
        <Button
            android:id="@+id/dialog_remark_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_cancel_bg"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textColor="@color/blue_2196f7"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/dialog_remark_btn_ensure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_ensure_bg"
            android:text="@string/ensure"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>
</RelativeLayout>