<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/dialog_detail_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_detail"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/dialog_detail_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_detail_top">
        <TextView
            android:id="@+id/dialog_detail_sort_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sort"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/dialog_detail_sort_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dialog_detail_cout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_detail_sort">
        <TextView
            android:id="@+id/dialog_detail_count_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/count"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/dialog_detail_count_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/dialog_detail_cout"
        android:padding="10dp">
        <Button
            android:id="@+id/dialog_detail_btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_cancel_bg"
            android:text="@string/delete"
            android:textStyle="bold"
            android:textColor="@color/blue_2196f7"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/dialog_detail_btn_modify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_ensure_bg"
            android:text="@string/modify"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>
</RelativeLayout>