<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f3f3f3">

    <RelativeLayout
        android:id="@+id/frag_record_rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp">

        <ImageView
            android:id="@+id/frag_record_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_canyin_fs"/>
        <TextView
            android:id="@+id/frag_record_tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_canyin"
            android:layout_toEndOf="@id/frag_record_iv"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>
        <EditText
            android:id="@+id/frag_record_et_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textColor="@color/blue_2196f7"
            android:inputType="number"
            android:background="@color/white"/>
    </RelativeLayout>

    <View
        android:id="@+id/frag_record_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/frag_record_rl_top"
        android:background="@color/gray_f3f3f3"/>
    <GridView
        android:id="@+id/frag_record_gv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frag_record_line1"
        android:background="@color/white"
        android:numColumns="5"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

<!--    自定义软键盘-->
    <com.ljx.bysj.utils.DiyKeyBoardView
        android:id="@+id/frag_record_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#CBCBCB"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:keyBackground="@drawable/bg_keyboard_btn"
        android:keyTextColor="#000000"
        android:keyTextSize="28sp"
        android:labelTextSize="23.04sp"
        android:shadowRadius="0"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_above="@id/frag_record_keyboard">
        <TextView
            android:id="@+id/frag_record_tv_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/frag_record_tv_time"
            android:padding="10dp"
            android:text="@string/remark_add"/>
        <TextView
            android:id="@+id/frag_record_tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:text="@string/time"/>
    </RelativeLayout>

</RelativeLayout>