<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_f3f3f3"
    tools:context=".ChartActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/chart_iv_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/it_back"
            android:onClick="onClick"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_centerVertical="true"
            android:text="@string/chart_analyze"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/chart_iv_calander"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/it_rili"
            android:layout_alignParentEnd="true"
            android:onClick="onClick"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/chart_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2021年2月"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="日平均支出"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/chart_tv_expend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="20"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="日平均收入"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/chart_tv_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="20"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center">
        <Button
            android:id="@+id/chart_btn_expend"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/expend"
            android:background="@drawable/dialog_btn_ensure_bg"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="onClick"
            android:layout_marginEnd="10dp"/>
        <Button
            android:id="@+id/chart_btn_income"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/income"
            android:background="@drawable/dialog_btn_cancel_bg"
            android:textColor="@color/blue_2196f7"
            android:textStyle="bold"
            android:onClick="onClick"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/chart_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>